[package]
name = "async_main"
version = "0.1.0"
edition = "2021"
description = "Runtime-agnostic async main proc macro"
repository = "https://github.com/ardaku/async_main"
documentation = "https://docs.rs/async_main"
homepage = "https://github.com/ardaku/async_main/blob/stable/CHANGELOG.md"
include = ["/src/**", "/examples/**", "/README.md"]
keywords = ["async", "platform-agnostic", "cross-platform", "executor", "main"]
categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
readme = "README.md"

[lib]
proc-macro = true

[dev-dependencies]
pasts = "0.12"

[features]
default = []
async-std = []
asynchronix = []
async-executor = []
futures = []
pasts = []
smolscale = []
tokio = []
