# Copyright © 2022-2023 The async_main crate contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "async_main"
version = "0.1.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Runtime-agnostic async main proc macro"
repository = "https://github.com/ardaku/async_main"
documentation = "https://docs.rs/async_main"
homepage = "https://github.com/ardaku/async_main/blob/stable/CHANGELOG.md"
include = ["/src/**", "/examples/**", "/README.md"]
keywords = ["async", "platform-agnostic", "cross-platform", "executor", "main"]
categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
async-executor = "1.5"
async-std = "1.12"
futures = { version = "0.3", features = ["executor"] }
futures-lite = "1.12"
pasts = "0.12"
smolscale = "0.3"
tokio = { version = "1.23", features = ["rt"] }
