# Copyright © 2022-2023 The async_main crate contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[workspace]
members = [".", "macro"]
default-members = [".", "macro"]

[workspace.package]
version = "0.2.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
edition = "2021"

[package]
name = "async_main"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Runtime-agnostic async main proc macro"
repository = "https://github.com/ardaku/async_main"
documentation = "https://docs.rs/async_main"
homepage = "https://github.com/ardaku/async_main/blob/stable/CHANGELOG.md"
include = ["/src/**", "/examples/**", "/README.md"]
keywords = ["async", "platform-agnostic", "cross-platform", "executor", "main"]
categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
readme = "../README.md"

[dependencies]
async_main_macro = { path = "macro" }
pasts = "0.13"

async-executor = { version = "1.5", optional = true }
async-std = { version = "1.12", features = ["unstable"], optional = true }
futures = { version = "0.3", features = ["executor"], optional = true }
futures-lite = { version = "1.12", optional = true }
tokio = { version = "1.23", features = ["rt"], optional = true }

[features]
default = []

async-executor = ["dep:async-executor", "dep:futures-lite"]
async-std = ["dep:async-std"]
futures = ["dep:futures"]
pasts = []
tokio = ["dep:tokio"]

web = ["async_main_macro/web"]

[package.metadata.docs.rs]
features = ["pasts"]
