# Copyright © 2022-2023 The async_main crate contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "async_main_macro"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Runtime-agnostic async main proc macro"
repository = "https://github.com/ardaku/async_main"
documentation = "https://docs.rs/async_main"
homepage = "https://github.com/ardaku/async_main/blob/stable/CHANGELOG.md"
include = ["/src/**", "/examples/**", "/README.md"]
keywords = ["async", "platform-agnostic", "cross-platform", "executor", "main"]
categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []

web = []
